Working maven test. Updated core methods